# Orns-Forge

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: forge-animator.md  forge-architect.md  forge-data.md  forge-debugger.md  forge-finder.md  forge-grunt.md  forge-judge.md  forge-legal.md  forge-librarian.md  forge-mapper.md  forge-migrator.md  forge-mobile-verifier.md  forge-mobile.md  forge-refuter.md  forge-researcher.md  forge-reviewer.md  forge-scout.md  forge-security.md  forge-spec-writer.md  forge-test-writer.md  forge-triage.md  forge-ui-verifier.md  forge-ui.md  forge-verifier.md  forge-worker.md
assets/: banner.ans  orn-motd-art.ans
commands/: add.md  agent.md  banner.md  blueprint.md  cancel.md  court.md  discover.md  dualverify.md  edit.md  equip.md  inquest.md  map.md  memory.md  monitor.md  onboard.md  port.md  scout.md  seed.md  settings.md  spec.md  start.md  status.md  telemetry.md  triage.md  uninstall.md  update.md  verify.md
docs/: README.md  architecture.md  conventions.md  customization-persistence.md  profile-comparison.md  releasing.md  systems.md
tools/benchmark/fixture/: CHANGELOG.md  README.md  conftest.py  pyproject.toml
tools/benchmark/fixture/src/ledgerkit/: __init__.py  accounts.py  cli.py  csv_import.py  ledger.py  money.py  report.py  transactions.py
tools/benchmark/fixture/tests/: conftest.py  test_accounts.py  test_cli.py  test_csv_import.py  test_ledger.py  test_money.py  test_report.py  test_transactions.py
(+400 files in other folders)
