[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerkit"
version = "0.1.0"
description = "A small double-entry-flavored ledger library."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
